# py_reportit

./: .dockerignore  .gitignore  .shared.base.env  .shared.dev.env  .shared.prod.env  Dockerfile  LICENSE  README.md  celeryconfig.py  docker-compose.dev.yaml  docker-compose.prod-sample.yaml  docker-compose.yaml  mysql.cnf  reportit-api.dev.env  requirements.txt  run_py_reportit.sh  run_py_reportit_crawler.sh  setup.cfg
.github/workflows/: run_test_and_build.yaml  run_tests.yaml  test.yaml  test_build_deploy.yaml
alembic/: env.py
alembic/versions/: 025ae0f53687_add_type_to_answer_meta_tweet_model.py  02e4575283cd_remove_modified_count_from_crawlresult_.py  115a8a4ea7f8_add_user_model.py  20ee38bd1124_add_address_properties_to_report_meta.py  2649f2cc8573_add_language_property_to_report_and_.py  2a1c73173985_remove_lat_lon_stop_positions_from_.py  3151e0810aa7_cascade_for_crawl_and_crawl_item_models.py  360f5f8b459a_remove_photo_downloaded_and_thumb_.py  3913545735d0_report_and_meta_tables_initial_creation.py  3f0abbafe5a9_remove_photo_and_thumbail_urls_from_.py  43b6a37711d9_change_ordering_of_tweet_ids_for_answers.py  4de60e84861c_reintroduce_crawl_and_crawl_item_models.py  5a69174b2172_add_closed_without_answer_property_to_.py  627451339463_add_report_answer_and_related_meta_.py  7433e84fabed_extend_meta_model_by_is_online_add_.py  8dc6ad3a2a7c_add_order_field_to_answer_model.py  c1ba9456086c_add_address_properties_to_report_meta_.py  c9b03285f2b7_add_do_tweet_switch_for_reports_and_.py  (+8 more)
py_reportit/: py_reportit.py
py_reportit_bot/: __init__.py
(+108 files in other folders)
