[metadata]
name = py_reportit_bot
version = 2.13.3
author = Federico Gentile
author_email = federico@dillendapp.eu
description = An API and Python bot retweeting publicly accessible Report-It reports from the City of Luxembourg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fedus/py_reportit
project_urls =
    Bug Tracker = https://github.com/fedus/py_reportit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires =
    alembic
    beautifulsoup4
    fastapi[all]
    Pillow
    pycld2
    PyMySQL
    python-dotenv
    requests
    SQLAlchemy
    tweepy
    sqlakeyset
    pytest
    dependency-injector
    toolz
    requests-random-user-agent
    Celery
    SQLAlchemy-Utils
    arrow
    python-jose
    passlib
    click

[options.entry_points]
console_scripts =
    py_reportit_bot = py_reportit.crawler.py_reportit:run_app

[options.packages.find]
where = .
